separate mongo and redis pforile test, local

--- a/consumer/src/main/resources/application.yaml
+++ b/consumer/src/main/resources/application.yaml
@@ -2,6 +2,10 @@
 spring:
   application:
     name: notification-consumer
+
   profiles:
     active: local
     include: event
+
+server:
+  port: 8081
